# magichat

./: Cargo.toml  README.md
src/: chat.rs  login.rs  main.rs  server_info.rs  websocket.rs
src/screens/: hub.rs
src/widgets/: chat.rs  login.rs  navbar.rs
