[package]
name = "magichat"
version = "0.0.0"
edition = "2024"

[dependencies]
async-tungstenite = { version = "0.29.1", features = ["tokio-rustls-webpki-roots", "tokio"] }
futures = "0.3.31"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image", "advanced", "sipper", "tokio"] }
tokio = { version = "1.45.1", features = ["time"] }
url = "2.5.4"
